[gd_scene load_steps=9 format=3 uid="uid://dy6oqfyna5fh4"]

[ext_resource type="Script" path="res://Scripts/bug.gd" id="1_dcr2u"]
[ext_resource type="PackedScene" uid="uid://dgm8e3v4kpfux" path="res://Scenes/Components/platformer_component.tscn" id="2_k3w74"]
[ext_resource type="Texture2D" uid="uid://dyntflns808cm" path="res://Assets/squawq7-pfp.png" id="2_rqfre"]
[ext_resource type="Texture2D" uid="uid://vbnxbujkkq08" path="res://Assets/circle_05.png" id="3_722u2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qgi3k"]
height = 0.155069
radius = 0.388203

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_45cx8"]
albedo_texture = ExtResource("2_rqfre")

[sub_resource type="SphereShape3D" id="SphereShape3D_rct7k"]
radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g6vth"]
albedo_color = Color(1, 0, 0, 1)

[node name="Beetle" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0901996, 0)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_dcr2u")

[node name="PlatformerComponent" parent="." node_paths=PackedStringArray("target", "model") instance=ExtResource("2_k3w74")]
jump_force = 12.0
max_fall_speed = -75.0
move_speed = 2.0
turn_acceleration = 50.0
gravity = 40.0
acceleration = 50.0
friction = 80.0
target = NodePath("..")
model = NodePath("../Model")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.101317)
shape = SubResource("CylinderShape3D_qgi3k")

[node name="Model" type="CSGCombiner3D" parent="."]
material_override = SubResource("StandardMaterial3D_45cx8")

[node name="CSGBox3D" type="CSGBox3D" parent="Model"]
size = Vector3(0.3, 0.15, 0.6)

[node name="CSGBox3D8" type="CSGBox3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0443895, -0.32602)
size = Vector3(0.262021, 0.114436, 0.328036)

[node name="CSGBox3D2" type="CSGBox3D" parent="Model"]
transform = Transform3D(-4.2222e-08, -0.258819, -0.965926, -1.13133e-08, 0.965926, -0.258819, 1, 0, -4.37114e-08, -0.192593, -0.0150582, 0.0055225)
size = Vector3(0.101544, 0.0728633, 0.314474)

[node name="CSGBox3D7" type="CSGBox3D" parent="Model"]
transform = Transform3D(-0.258819, -0.25, -0.933013, -1.13133e-08, 0.965926, -0.258819, 0.965926, -0.0669873, -0.25, -0.192593, -0.0150582, -0.18498)
size = Vector3(0.101544, 0.0728633, 0.314474)

[node name="CSGBox3D6" type="CSGBox3D" parent="Model"]
transform = Transform3D(0.5, -0.224144, -0.836516, -1.13133e-08, 0.965926, -0.258819, 0.866025, 0.12941, 0.482963, -0.192593, -0.0150582, 0.208835)
size = Vector3(0.101544, 0.0728633, 0.314474)

[node name="CSGBox3D3" type="CSGBox3D" parent="Model"]
transform = Transform3D(-4.52008e-08, 0.258819, 0.965926, -1.13133e-08, 0.965926, -0.258819, -1, -2.26267e-08, -4.07325e-08, 0.251832, -0.0150582, 0.0055225)
size = Vector3(0.101544, 0.0728633, 0.314474)

[node name="CSGBox3D5" type="CSGBox3D" parent="Model"]
transform = Transform3D(-0.258819, 0.25, 0.933013, -1.13133e-08, 0.965926, -0.258819, -0.965926, -0.0669873, -0.25, 0.251832, -0.0150582, -0.179751)
size = Vector3(0.101544, 0.0728633, 0.314474)

[node name="CSGBox3D9" type="CSGBox3D" parent="Model"]
transform = Transform3D(0.707107, -0.183013, -0.683013, -1.13133e-08, 0.965926, -0.258819, 0.707107, 0.183013, 0.683013, 0.1761, 0.119868, -0.546538)
size = Vector3(0.0459091, 0.0260695, 0.314474)

[node name="CSGBox3D10" type="CSGBox3D" parent="Model"]
transform = Transform3D(0.707107, 0.183013, 0.683013, -1.13133e-08, 0.965926, -0.258819, -0.707107, 0.183013, 0.683013, -0.162946, 0.119868, -0.546538)
size = Vector3(0.0459091, 0.0260695, 0.314474)

[node name="CSGBox3D4" type="CSGBox3D" parent="Model"]
transform = Transform3D(0.258819, 0.25, 0.933013, -1.13133e-08, 0.965926, -0.258819, -0.965926, 0.0669873, 0.25, 0.251832, -0.0150582, 0.187954)
size = Vector3(0.101544, 0.0728633, 0.314474)

[node name="ExplodeArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 31

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplodeArea"]
shape = SubResource("SphereShape3D_rct7k")

[node name="ExplosionEffect" type="CSGSphere3D" parent="ExplodeArea"]
visible = false
radius = 2.0
material = SubResource("StandardMaterial3D_g6vth")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.05, 0)
size = Vector3(2.5, 10, 2.5)
texture_albedo = ExtResource("3_722u2")
modulate = Color(0, 0, 0, 1)
upper_fade = 1e-05
lower_fade = 1e-05

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
